# FlashCard

./: .gitignore  LICENSE  LICENSE.md  Makefile  README.md  README.rst  backend.cabal  backup.sql  config.yml  config.yml.example  db_dump.sql  db_restore_data.sh  dev.env  drop-ddl.sql  elm-package.json  elm.js  elm.json  index.html  index.html.backup  izidict.cabal  izidict.cabal.backup  package.yaml  production.env  queries.sql  questionary.py  sqitch.conf  sqitch.plan  sql.load  stack.yaml  tags  words  words.csv
.HTF/: spec.history
Words/: $.tags  API.elm  App.elm  IziCss.elm  Ports.elm  Request.elm  Route.elm  Util.elm
Words/Data/: Message.elm  Session.elm  User.elm
Words/Page/: Errored.elm  Home.elm  Login.elm  NotFound.elm  ProfileEdit.elm  Quizz.elm  Register.elm  WordDelete.elm  WordEdit.elm
Words/Views/: Errors.elm  Forms.elm  Login.elm  Messages.elm  Navigation.elm  Page.elm  Words.elm
app/: GenerateElmAPI.hs  Main.hs  TestSQL.hs  generateElmAPI.hs  main.hs  testSQL.hs  testSQLError.hs
cubes/: base_configuration  certificates  dehydrated  nginx  postgresql
cubes/deploy/: deploy.sh  helpers.sh
cubes/deploy/templates/: authorized_keys  pg_service.conf  vhost.tpl
debian/: changelog  control  izidict.service  rules
deploy/: 0001-words.sql  0002-users.sql  0003-tokens.sql  0004-session.sql  0005-scoring.sql  0006-update-user.sql
example/: swagger.json
front/: .babelrc  FlashCardEdit.js  FullscreenNavigation.jsx  Makefile  TopNavigation.jsx  main.js  package-lock.json  package.json  utils.js  webpack.config.js
my-elm-dir/: API.elm
ressources/: fonts.css
ressources/fontello/: config.json  demo.html
ressources/fontello/css/: fontello-embedded.css  fontello-ie7.css
revert/: 0001-words.sql  0002-users.sql  0003-tokens.sql  0004-session.sql  0005-scoring.sql  0006-update-user.sql
sql/: addFlashCard.sql  checkPassword.sql  decreaseBucketFlashCard.sql  deleteFlashCard.sql  getFlashCard.sql  getFlashCards.sql  getNewRandomSession.sql  getNewRandomSessionWithoutPasswordCheck.sql  getQuizzFlashCard.sql  getUserId.sql  increaseBucketFlashCard.sql  insertDefaultFlashCards.sql  insertUser.sql  insert_word.sql  registerUser.sql  searchFlashCards.sql  updateFlashCard.sql  updatePassword.sql  verifyFlashCardAnswer.sql  verifyFlashCardRectoAnswer.sql  verifyFlashCardVersoAnswer.sql
src/: API.hs  Auth.hs  Cache.hs  Config.hs  Css.hs  Data.hs  Database.hs  Form.hs  FullUser.hs  GrantUser.hs  HandlerM.hs  JWTToken.hs  Lib.hs  MaybeString.hs  Mustache.hs  NewUser.hs  PostgreSQL.hs  Queries.hs  Queries.sql  SQL.hs  Server.hs  SharedEnv.hs  StringArray.hs  Template.hs  Token.hs  User.hs  Utils.hs  Word.hs
src/API/: Facebook.hs
src/Data/: APIFacebook.hs  Exception.hs  FlashCard.hs  GrantUser.hs  Message.hs  NewUser.hs  Session.hs  Settings.hs  User.hs  Word.hs
src/Database/: Queries.hs  SqlRow.hs  Types.hs
src/sql/: FullUser.sql  NewUser.sql  User.sql  Word.sql
src/templates/: account.html  dashboard.html  flashcard.add.html  flashcard.edit.html  footer.html  head.html  header-logo.html  home.html  login.html  nav.fullscreen.html  nav.login.html  quizz.answer.html  quizz.finish.html  quizz.html  register.html  robots.txt  sitemap.xml
static/tmp/: autogen-FQn2C_-6.js  autogen-PE46a7-4.css  autogen-dAT6QVJx.js  autogen-f9mZBX8C.js
test/: Spec.hs  index.html  tests.sh
verify/: 0001-words.sql  0002-users.sql  0003-tokens.sql  0004-session.sql  0005-scoring.sql  0006-update-user.sql
www/: elm.app.js  elm.js  elm.navigation.js  index.html  robots.txt  sitemap.xml
www/images/: icons.xcf
www/js/: izidict.js
www/ressources/: fontello.eot  theme.css
www/ressources/fontello/css/: fontello.css
