name:                backend
version:             0.1.0.0
synopsis:            words web backend
description:         words web backend
homepage:            https://github.com/aRkadeFR/backend#readme
license:             BSD3
license-file:        LICENSE
author:              aRkadeFR
maintainer:          contact@arkade.info
copyright:           MIT
category:            divers
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Queries
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-pretty
                     , servant >= 0.5
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , swagger2
                     , lens
                     , wai
                     , warp
                     , containers
                     , mtl
                     , resource-pool >= 0.2.3.2
                     , bytestring >= 0.10.8.2
                     , HDBC >= 2.4.0.2
                     , HDBC-postgresql >= 2.3.2.5
                     , yeshql >= 3.0.1.3
  default-language:    Haskell2010

executable backend-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , backend
  default-language:    Haskell2010

test-suite backend-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , backend
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/aRkadeFR/backend
